--- a/style.css
+++ b/style.css
@@ -130,11 +130,45 @@ section.sdp p{
 }
 
 section.sdptext{
-    height: 800px;
+    height: 750px;
     background: #dcdcdf95;
 }
 
 div.tabs-content-item p{
     font-size: 10px;
     padding: 10px;
+}
+
+footer{
+    margin-bottom: 0px;
+    height: 131px;
+    background-color: black;
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 2px solid grey;
+}
+
+.ifoot{
+    color: white;
+    font-size: 28px;
+}
+
+p.pfoot{
+    font-size: 10px;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+div.dfoot{
+    margin-top: 20px;
+}
+
+div.footer2{
+    font-size: 10px;
+    text-align: center;
+    color: #000;
+    background-color: #000;
+    padding: 10px;
+    margin-bottom: 40px;
+    color: white;
 }
